Avance de reservas

--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/hotelnieve.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/hotelnieve.html
@@ -32,7 +32,7 @@
             <div class="col-xl-5 ps-4 col-6 d-flex justify-content-between d-none d-lg-flex">
                 <a href="index.html" class="">Inicio</a>
                 <a href="" class="">Inicio sesión</a>
-                <a href="index.html#contacto" class="">Contacto</a>
+                <a href="hotelplaya.html" class="">Playa</a>
             </div>
             <div class="col-12 col-lg-6 ps-3 d-flex align-items-center justify-content-between">
                 <div class="dropdown">
@@ -70,7 +70,7 @@
                                 <a href="" >Inicio de sesión</a>
                             </div>
                             <div class="ps-2">
-                                <a href="index.html#contacto" >Contacto</a>
+                                <a href="hotelplaya.html" >Playa</a>
                             </div>
                         </div>
                     </div>
@@ -92,37 +92,37 @@
                     <img src="img/hotelnieveFoto.jpg" alt="" class="col-10 col-md-6 col-xl-4 shadow">
                     <div class=" col-10 col-md-6 col-xl-8 text-center mt-3 mt-md-0 d-flex align-items-center flex-column">
                         <h3 class="mb-4">Descripción</h3>
-                        <div class="col-xl-6 col-md-9 col-11">Enclavado en el corazón de las majestuosas montañas nevadas, este hotel de lujo ofrece una experiencia incomparable para los amantes del invierno. Con su arquitectura impresionante que combina elegancia moderna y elementos rústicos, cada detalle ha sido cuidadosamente diseñado para ofrecer un ambiente de lujo y confort. Desde las suites exquisitamente decoradas con vistas panorámicas hasta las instalaciones de clase mundial, como spas de nieve, restaurantes gourmet y pistas de esquí privadas, los huéspedes son recibidos en un mundo de opulencia y sofisticación. Además, el servicio impecable y personalizado garantiza que cada momento de la estancia sea inolvidable. Sumérjase en la serenidad de la naturaleza circundante mientras disfruta del lujo incomparable de este retiro alpino.</div>
+                        <div class="col-xl-6 col-md-9 col-11">Enclavado en el corazón de las majestuosas montañas nevadas de Horlewis landia, este hotel de lujo ofrece una experiencia incomparable para los amantes del invierno. Con su arquitectura impresionante que combina elegancia moderna y elementos rústicos, cada detalle ha sido cuidadosamente diseñado para ofrecer un ambiente de lujo y confort. Desde las suites exquisitamente decoradas con vistas panorámicas hasta las instalaciones de clase mundial, como spas de nieve, restaurantes gourmet y pistas de esquí privadas, los huéspedes son recibidos en un mundo de opulencia y sofisticación. Además, el servicio impecable y personalizado garantiza que cada momento de la estancia sea inolvidable. Sumérjase en la serenidad de la naturaleza circundante mientras disfruta del lujo incomparable de este retiro alpino.</div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-around align-items-center flex-wrap col-12 mt-4">
                     <div class="shadow mb-5">
-                        <img src="img/hotelnieve1.jpg" alt="Habitación 1">
-                        <h4 class="mt-3 ms-3">Habitación simple</h4>
+                        <img src="img/hotelnieve1.jpg" alt="Habitación 1"/>
+                        <h4 class="mt-3 ms-3"><a href="reservas.html">Habitación simple</a></h4>
                         <div class="mt-1 ms-3 me-3"> Un refugio básico con cama cómoda y vistas a las montañas nevadas para una experiencia tranquila en la nieve.</div>
                         <div class="me-2 text-end fw-semibold">
                             Precio por noche: 350€
                         </div>
                     </div>
                     <div class="shadow mb-5">
-                        <img src="https://imgcy.trivago.com/c_limit,d_dummy.jpeg,f_auto,h_600,q_auto,w_600//hotelier-images/be/6e/51f1de758273f5b935361a4bba127d8f3811ae9da8842b614286d4bbbe76.jpeg" alt="Habitación 2">
-                        <h4 class="mt-3 ms-3">Habitación old school</h4>
+                        <img src="https://imgcy.trivago.com/c_limit,d_dummy.jpeg,f_auto,h_600,q_auto,w_600//hotelier-images/be/6e/51f1de758273f5b935361a4bba127d8f3811ae9da8842b614286d4bbbe76.jpeg" alt="Habitación 2"/>
+                        <h4 class="mt-3 ms-3"><a href="reservas.html">Habitación old school</a></h4>
                         <div class="mt-1 ms-3 me-3"> Una estancia con encanto vintage y muebles de madera para revivir la nostalgia de los refugios de montaña tradicionales.</div>
                         <div class="me-2 text-end fw-semibold">
                             Precio por noche: 489€
                         </div>
                     </div>
                     <div class="shadow mb-5">
-                        <img src="img/hotelnieve3.webp" alt="Habitación 3">
-                        <h4 class="mt-3 ms-3">Suite buble gum</h4>
+                        <img src="img/hotelnieve3.webp" alt="Habitación 3"/>
+                        <h4 class="mt-3 ms-3"><a href="reservas.html">Suite buble gum</a></h4>
                         <div class="mt-1 ms-3 me-3"> Una suite divertida y colorida con decoración inspirada en chicle, bañera de hidromasaje y un ambiente lleno de energía y diversión.</div>
                         <div class="me-2 text-end fw-semibold">
                             Precio por noche: 569€
                         </div>
                     </div>
                     <div class="shadow mb-5">
-                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2b/50/98/d3/marvelous-residence.jpg" alt="Habitación 4">
-                        <h4 class="mt-3 ms-3">Suite future mood</h4>
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2b/50/98/d3/marvelous-residence.jpg" alt="Habitación 4"/>
+                        <h4 class="mt-3 ms-3"><a href="reservas.html">Suite future mood</a></h4>
                         <div class="mt-1 ms-3 me-3"> Una experiencia futurista con diseño moderno, tecnología de punta y vistas panorámicas al paisaje nevado.</div>
                         <div class="me-2 text-end fw-semibold">
                             Precio por noche: 1099€
