--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
@@ -29,9 +29,9 @@
         </div>
         <div class="col-6 d-flex justify-content-between align-items-center">
             <div class="col-xl-5 ps-4 col-6 d-flex justify-content-between d-none d-lg-flex">
-                <a href="" class="">Hoteles</a>
-                <a href="" class="">Inicio sesión</a>
-                <a href="#contacto" class="">Contacto</a>
+                <a href="" class="">Iniciar sesión</a>
+                <a href="hotelplaya.html" class="">Playa</a>
+                <a href="hotelnieve.html" class="">Nieve</a>
             </div>
             <div class="col-12 col-lg-6 ps-3 d-flex align-items-center justify-content-between">
                 <div class="dropdown">
@@ -67,6 +67,12 @@
                             </div>
                             <div class="ps-2">
                                 <a href="" >Inicio de sesión</a>
+                            </div>
+                            <div class="ps-2">
+                                <a href="hotelplaya.html" >Playa</a>
+                            </div>
+                            <div class="ps-2">
+                                <a href="hotelnieve.html" >Nieve</a>
                             </div>
                             <div class="ps-2">
                                 <a href="#contacto" >Contacto</a>
@@ -135,13 +141,13 @@
                 </div>
                 <div class="d-flex justify-content-center align-items-center flex-column">
                     <img src="img/irhotel3.png" alt="">
-                    <h2">Montaña</h2>
-                    <a href="hotelplaya.html" class="fw-semibold ps-1 pe-1">Ver hoteles<i class="bi bi-arrow-bar-right"></i></a>
+                    <h2 >Montaña</h2>
+                    <a href="hotelnieve.html" class="fw-semibold ps-1 pe-1">Ver hoteles<i class="bi bi-arrow-bar-right"></i></a>
                 </div>
                 <div class="d-flex justify-content-center align-items-center flex-column">
                     <img src="img/irhotel4.png" alt="">
                     <h2>Ciudad</h2>
-                    <a href="hotelnieve.html" class="fw-semibold ps-1 pe-1">Ver hoteles<i class="bi bi-arrow-bar-right"></i></a>
+                    <a href="hotelplaya.html" class="fw-semibold ps-1 pe-1">Ver hoteles<i class="bi bi-arrow-bar-right"></i></a>
                 </div>
             </section>
         </article>
