--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/reservas.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/reservas.html
@@ -138,14 +138,35 @@
                     <div class="me-2">+45,39€</div>
                 </div>
             </section>
-            <section class="col-12 shadow p-4 mt-4 d-flex justify-content-between">
+            <section class="col-12 shadow p-4 mt-4 d-flex justify-content-around align-items-center flex-wrap">
                 <select class="p-3">
                     <option value="">Vacacional</option>
                     <option value="">Tropical</option>
                     <option value="">Paradisiaca</option>
                     <option value="">Tropical</option>
                 </select>
+                <div class="calendario ">
+                    <div class="d-flex justify-content-center col-12">
+                        <div class="cursor-pointer" id="prev-month">&#9664;</div>
+                        <div class="d-flex col-6 justify-content-center fw-bold">
+                            <div class="calendar__month" id="month"></div>
+                            <div class="calendar__year" id="year"></div>
+                        </div>
+                        <div class="cursor-pointer" id="next-month">&#9654;</div>
+                    </div>
                 
+                    <div class="d-flex justify-content-start col-12 fw-semibold dias">
+                        <div class=" text-center">Mon</div>
+                        <div class=" text-center">Tue</div>
+                        <div class=" text-center">Wed</div>
+                        <div class=" text-center">Thu</div>
+                        <div class=" text-center">Fri</div>
+                        <div class=" text-center">Sat</div>
+                        <div class=" text-center">Sun</div>
+                    </div>
+                
+                    <div class="d-flex justify-content-start col-12 flex-wrap dias" id="dates"></div>
+                </div>
             </section>
         </article>
     </main>
@@ -167,6 +188,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="js/calendario.js"></script>
 </body>
 
 </html>
