--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
@@ -235,7 +235,7 @@
           </div>
           <div class="row container mt-4">
             <div class="col-1"></div>
-            <input  type="button" value="Iniciar sesión" class="col-11 w-75 me-2 botonInicioSesion" name="inicioSesion" id="botonInicio"/>
+            <a  href="perfil.html" value="" class="col-11 w-75 me-2 botonInicioSesion" name="inicioSesion" >Iniciar sesión</a>
           </div>
         </form>
         <div class="row container mt-2">
