--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/perfil.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/perfil.html
@@ -112,7 +112,7 @@
                             <div class="col-8">
                                 <input type="password" class="form-control" value="HBFUGHBWR8Y2DAADkhjdjkahsfdhijuashfu342137">
                             </div>
-                            <button class="boton-editar-datos rounded col-2 mt-3 py-2 px-3 mb-3 shadow">Editar datos</button>
+                            <button class="boton-editar-datos rounded col-4 mt-3 py-2 px-3 mb-3 shadow">Editar datos</button>
                         </div>
                       </div>
                     </div>
@@ -133,7 +133,7 @@
                             <div class="col-8">
                                 <input type="tel" class="form-control" value="+34 611 479 031">
                             </div>
-                            <button class="boton-editar-datos rounded col-2 mt-3 py-2 px-3 mb-3 shadow">Editar datos de contacto</button>
+                            <button class="boton-editar-datos rounded col-4 mt-3 py-2 px-3 mb-3 shadow">Editar datos de contacto</button>
                         </div>
                       </div>
                     </div>
@@ -146,8 +146,25 @@
                       </h2>
                       <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                         <div class="accordion-body px-4 py-3 mb-4 d-flex justify-content-center align-items-center flex-column">
-                            <div class="d-flex flex-wrap px-3 py-4 shadow col-11">
-                                <img src="img/hotelnieve1.jpg" alt="Hotel nieve" class="w-400">
+                            <div class="d-flex flex-wrap px-3 py-4 shadow col-11 justify-content-around position-relative align-items-lg-start align-items-center">
+                                <img src="img/hotelnieve1.jpg" alt="Hotel nieve" class="col-xl-4 col-lg-5 col-10 mt-2 mt-lg-0 shadow h-100 align-self-center">
+                                <div class="col-xl-8 col-lg-7 col-10 d-flex flex-lg-row flex-column ">
+                                    <div class="col-12 col-lg-8 ps-2 mt-3 mt-lg-0">
+                                        <h4 class="">COPO DE NIEVE<img src="img/5estrellas.png" alt="Cinco estrellas"></h4>
+                                        <h6 class="ms-2">Habitación simple</h6>
+                                        <h6 class="ms-2">Extras</h6>
+                                        <div class="ms-3">-Desayuno</div>
+                                        <div class="ms-3">-Cancelación disponible</div>
+                                    </div>
+                                    <div class="col-12 col-lg-4 d-flex flex-column ">
+                                        <h6 class="ms-2 mt-2 col-12"><i class="bi bi-calendar"></i>Día de entrada: 08/03/2024</h6>
+                                        <h6 class="ms-2 col-12"><i class="bi bi-calendar"></i>Día de salida: 08/03/2024</h6>
+                                        <h6 class="ms-2 mt-3 col-12"><i class="bi bi-clock-history"></i>Check-in: 12:00</h6>
+                                        <h6 class="ms-2 col-12"><i class="bi bi-clock-history"></i>Check-out: 10:00</h6>
+                                        <h6 class="ms-2 mt-3 col-12">Precio 4859.99€</h6>
+                                        <button class="mt-4 align-self-lg-end align-self-center   btn btn-dark">Cancelar</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                       </div>
