--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/index.html
@@ -93,12 +93,12 @@
                 <h2 class="col-6 mt-5 mt-sm-4">Reserva en los mejores hoteles</h2>
                 <div class="col-6 mt-2">Sumérgete en una experiencia inolvidable en los hoteles Horlewis y disfruta de
                     momentos excepcionales que perdurarán en tu memoria.</div>
-                <a href="" class="text-center col-6 col-md-7 mt-1 d-flex justify-content-center">
+                <a href="reservas.html" class="text-center col-6 col-md-7 mt-1 d-flex justify-content-center">
                     <h3 class="col-xl-6 col-lg-7 col-md-9 col-12 ">Reservar<i class="bi bi-arrow-bar-right"></i></h3>
                 </a>
             </section>
             <section class="col-6"><img src="img/imagenprincipal.png" alt="Imagen de presentación"
-                    class="col-12 h-100" /></section>
+                    class="col-12 h-100" /></section>       
             <section ><i class="bi bi-chevron-compact-up"></i></section>
         </article>
         <article class="col-12 d-flex justify-content-center align-items-center flex-column mb-4">
