--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/hotelplaya.html
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/hotelplaya.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="stylesheets/header.css">
     <link rel="stylesheet" href="stylesheets/footer.css">
     <link rel="stylesheet" href="stylesheets/playaParadusiaca.css">
+    <link rel="stylesheet" href="stylesheets/iniciosesion.css">
     <title>HORLEWIS</title>
 </head>
 
@@ -31,7 +32,7 @@
         <div class="col-6 d-flex justify-content-between align-items-center">
             <div class="col-xl-5 ps-4 col-6 d-flex justify-content-between d-none d-lg-flex">
                 <a href="index.html" class="">Inicio</a>
-                <a href="" class="">Inicio sesión</a>
+                <a id="inicioSesion">Iniciar sesión</a>
                 <a href="hotelnieve.html" class="">Nieve</a>
             </div>
             <div class="col-12 col-lg-6 ps-3 d-flex align-items-center justify-content-between">
@@ -67,7 +68,7 @@
                                 <a href="index.html" >Inicio</a>
                             </div>
                             <div class="ps-2">
-                                <a href="" >Inicio de sesión</a>
+                                <a id="inicioSesion2" >Inicio de sesión</a>
                             </div>
                             <div class="ps-2">
                                 <a href="hotelnieve.html" >Nieve</a>
@@ -264,6 +265,71 @@
             <h4>©José Luis Tárraga Segura - 2daw</h4>
         </div>
     </footer>
+    <dialog id="favDialog" class="dialog">
+        <div class="col-12 d-flex justify-content-end">
+          <button id="close" class="botoncross mt-2 me-3"><i class="bi bi-x-lg cross"></i></button>
+        </div>
+        <div class="row container mb-5">
+            <div class="col-4"></div>
+            <div class="col-4 d-flex justify-content-center align-items-center flex-column">
+                <h1 class="fuente-titulo">HORLEWIS</h1>
+                <img src="img/logo.png" alt="Logo HORLEWIS" class="col-12" />
+            </div>
+            <div class="col-4"></div>
+        </div>
+        <div class="row container mt-2">
+          <div class="col-1"></div>
+          <h1 class="col-8">Inicio sesión</h1>
+        </div>
+        <form action="validar.php" method="post" id="formularioInicioSesion">
+          <div class="row container mt-4">
+            <div class="col-1"></div>
+            <input id="nombreCorreo" type="text" class="inputBonito w-75 col-11" placeholder="Correo electronico o nombre de usuario" name="dni" required />
+          </div>
+          <div class="row container mt-3">
+            <div class="col-1"></div>
+            <input id="contraseña" type="password" class="inputBonito w-75 col-11" placeholder="Contraseña" name="nombre" required />
+          </div>
+          <div class="mt-4 d-flex justify-content-center container">
+          </div>
+          <div class="row container mt-4">
+            <div class="col-1"></div>
+            <a  href="perfil.html" value="" class="col-11 w-75 me-2 botonInicioSesion" name="inicioSesion" >Iniciar sesión</a>
+          </div>
+        </form>
+        <div class="row container mt-2">
+          <p class="col-12 text-center olvidado">¿Has olvidado tu contraseña?<a href="" class="enlaceClicaaquí"> Clica aquí.</a></p>
+        </div>
+        <div class="row container mt-3 mb-4">
+          <div class="col-1"></div>
+          <p class="col-11 ">¿No tienes cuenta?<strong><a href="" class="enlaceRegistro"> Registráte.</a></strong></p>
+        </div>
+    </dialog>
+    <div class="inicio-sesion" id="div-inicio-sesion">
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+    const iniciosesion = document.getElementById("inicioSesion");
+    const inicioSesion2 = document.getElementById("inicioSesion2");
+    const cancelButton = document.getElementById("close");
+    const favDialog = document.getElementById("favDialog");
+    if(sessionStorage.getItem("iniciosesion")=="true"){
+      favDialog.showModal();
+      sessionStorage.setItem("iniciosesion","false");
+    }
+    inicioSesion2.addEventListener("click", function () {
+      favDialog.showModal();
+    });
+    
+    iniciosesion.addEventListener("click", function () {
+      favDialog.showModal();
+    });
+
+    // Form cancel button closes the dialog box
+    cancelButton.addEventListener("click", function () {
+      favDialog.close();
+    });
+    </script>
 </body>
 </html>
